--- a/JavaWeb-exAvaliacao/WebContent/userInvalido.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/userInvalido.xhtml
@@ -10,8 +10,13 @@
 		<ui:define name="title">
 		</ui:define>
 		<ui:define name="content">
-			<div class="container text-center ">
-				<h1 style="margin-top: 300px"><i class="fa fa-exclamation-triangle"/>Você não pode acessar esta página<i class="fa fa-exclamation-triangle"/></h1>
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<h1 style="margin-top: 300px">
+						<i class="fa fa-exclamation-triangle" />Você não pode acessar esta
+						página<i class="fa fa-exclamation-triangle" />
+					</h1>
+				</div>
 			</div>
 		</ui:define>
 		<ui:define name="footer"></ui:define>
