--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-aluno.xhtml
@@ -17,130 +17,136 @@
 				<f:viewParam name="idAluno" value="#{alunoCadastroBean.idAluno}" />
 				<f:event type="preRenderView" listener="#{alunoCadastroBean.init}" />
 			</f:metadata>
-			<div class="container top-landing">
-				<h:messages id="messages" showSummary="true" />
-				<h2>Cadastro de Alunos</h2>
-				<h:form prependId="false">
-					<h:inputHidden value="#{alunoCadastroBean.aluno.rm}" />
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<div style="margin-top: 20px">
+						<h:messages id="messages" showSummary="true" />
+					</div>
+					<h2>Cadastro de Alunos</h2>
+					<h:form prependId="false">
+						<h:inputHidden value="#{alunoCadastroBean.aluno.rm}" />
 
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Nome" style="font-weight:bold" />
-								<h:inputText required="true" requiredMessage="Insira um nome"
-									pa:placeholder="Nome Completo"
-									value="#{alunoCadastroBean.aluno.nome}"
-									styleClass="form-control" />
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Nome" style="font-weight:bold" />
+									<h:inputText required="true" requiredMessage="Insira um nome"
+										pa:placeholder="Nome Completo"
+										value="#{alunoCadastroBean.aluno.nome}"
+										styleClass="form-control" />
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Email" style="font-weight:bold" />
+									<h:inputText required="true" requiredMessage="Insira um email"
+										pa:placeholder="Email"
+										value="#{alunoCadastroBean.aluno.email}"
+										styleClass="form-control" validatorMessage="Email inválido">
+										<f:validateRegex
+											pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
+									</h:inputText>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Email" style="font-weight:bold" />
-								<h:inputText required="true" requiredMessage="Insira um email"
-									pa:placeholder="Email" value="#{alunoCadastroBean.aluno.email}"
-									styleClass="form-control" validatorMessage="Email inválido">
-									<f:validateRegex
-										pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
-								</h:inputText>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Telefone" style="font-weight:bold" />
+									<h:inputText required="true"
+										requiredMessage="Insira um  telefone"
+										pa:placeholder="Telefone"
+										value="#{alunoCadastroBean.aluno.tel}"
+										styleClass="form-control tel" />
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Endereco" style="font-weight:bold" />
+									<h:inputText required="true"
+										requiredMessage="Insira um endereço" pa:placeholder="Endereço"
+										value="#{alunoCadastroBean.aluno.endereco}"
+										styleClass="form-control" />
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Telefone" style="font-weight:bold" />
-								<h:inputText required="true"
-									requiredMessage="Insira um  telefone" pa:placeholder="Telefone"
-									value="#{alunoCadastroBean.aluno.tel}"
-									styleClass="form-control tel" />
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Data de Nascimento"
+										style="font-weight:bold" />
+									<h:inputText required="true"
+										requiredMessage="Insira uma data de nascimento"
+										pa:data-language='pt-br' pa:placeholder="Data de Nascimento"
+										value="#{alunoCadastroBean.aluno.dataNasc}"
+										styleClass="form-control date">
+										<f:convertDateTime pattern="dd/MM/yyyy" />
+									</h:inputText>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="CPF" style="font-weight:bold" />
+									<h:inputText pa:placeholder="CPF"
+										value="#{alunoCadastroBean.aluno.cpf}"
+										styleClass="form-control cpf" required="true"
+										requiredMessage="Insira um CPF" />
+								</div>
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Endereco" style="font-weight:bold" />
-								<h:inputText required="true"
-									requiredMessage="Insira um endereço" pa:placeholder="Endereço"
-									value="#{alunoCadastroBean.aluno.endereco}"
-									styleClass="form-control" />
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<h:outputLabel value="Curso" style="font-weight:bold" />
+									<h:selectOneMenu required="true"
+										requiredMessage="Escolha um curso"
+										converter="#{simpleEntityConverter}"
+										styleClass="form-control multiselect multiselect-info"
+										value="#{alunoCadastroBean.aluno.curso}">
+										<f:selectItems value="#{alunoCadastroBean.listCurso}"
+											var="cur" itemValue="#{cur}" itemLabel="#{cur.nome}" />
+									</h:selectOneMenu>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Data de Nascimento"
-									style="font-weight:bold" />
-								<h:inputText required="true"
-									requiredMessage="Insira uma data de nascimento"
-									pa:data-language='pt-br' pa:placeholder="Data de Nascimento"
-									value="#{alunoCadastroBean.aluno.dataNasc}"
-									styleClass="form-control date">
-									<f:convertDateTime pattern="dd/MM/yyyy" />
-								</h:inputText>
+						<br />
+						<div class="row">
+							<div class="col-sm-12">
+								<div class="form-group">
+									<c:if
+										test="${empty param.idAluno and empty alunoCadastroBean.aluno.id}">
+										<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+											action="#{alunoCadastroBean.cadastrarAluno}" type="submit"
+											value="Cadastrar" />
+									</c:if>
+									<c:if test="${not empty param.idAluno}">
+										<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+											action="#{alunoCadastroBean.atualizarAluno}" type="submit"
+											value="Atualizar" />
+									</c:if>
+									<c:if
+										test="${empty param.idAluno and not empty alunoCadastroBean.aluno.id}">
+										<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+											action="#{alunoCadastroBean.atualizarAluno}" type="submit"
+											value="Atualizar" />
+									</c:if>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="CPF" style="font-weight:bold" />
-								<h:inputText pa:placeholder="CPF"
-									value="#{alunoCadastroBean.aluno.cpf}"
-									styleClass="form-control cpf" required="true"
-									requiredMessage="Insira um CPF" />
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="form-group">
-								<h:outputLabel value="Curso" style="font-weight:bold" />
-								<h:selectOneMenu required="true"
-									requiredMessage="Escolha um curso"
-									converter="#{simpleEntityConverter}"
-									styleClass="form-control multiselect multiselect-info"
-									value="#{alunoCadastroBean.aluno.curso}">
-									<f:selectItems value="#{alunoCadastroBean.listCurso}" var="cur"
-										itemValue="#{cur}" itemLabel="#{cur.nome}" />
-								</h:selectOneMenu>
-							</div>
-						</div>
-					</div>
-					<br />
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<c:if
-									test="${empty param.idAluno and empty alunoCadastroBean.aluno.id}">
-									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{alunoCadastroBean.cadastrarAluno}" type="submit"
-										value="Cadastrar" />
-								</c:if>
-								<c:if test="${not empty param.idAluno}">
-									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{alunoCadastroBean.atualizarAluno}" type="submit"
-										value="Atualizar" />
-								</c:if>
-								<c:if
-									test="${empty param.idAluno and not empty alunoCadastroBean.aluno.id}">
-									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{alunoCadastroBean.atualizarAluno}" type="submit"
-										value="Atualizar" />
-								</c:if>
-							</div>
-						</div>
-					</div>
-				</h:form>
-			</div>
-			<script type="text/javascript">
-				$(document).ready(function() {
-					$("select").select2();
-					$(".date").inputmask('dd/mm/yyyy');
-					$(".tel").inputmask('9999-99999');
-					$(".cpf").inputmask('999.999.999-99');
-					$('.date').datepicker({
-						maxDate : new Date()
+					</h:form>
+				</div>
+				<script type="text/javascript">
+					$(document).ready(function() {
+						$("select").select2();
+						$(".date").inputmask('dd/mm/yyyy');
+						$(".tel").inputmask('9999-99999');
+						$(".cpf").inputmask('999.999.999-99');
+						$('.date').datepicker({
+							maxDate : new Date()
+						});
 					});
-				});
-			</script>
+				</script>
+			</div>
 		</ui:define>
 		<ui:define name="footer"></ui:define>
 	</ui:composition>
