--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-curso.xhtml
@@ -17,83 +17,86 @@
 				<f:viewParam name="idCurso" value="#{cursoCadastroBean.idCurso}" />
 				<f:event type="preRenderView" listener="#{cursoCadastroBean.init}" />
 			</f:metadata>
-			<div class="container top-landing">
-				<h:messages id="messages" showSummary="true" />
-				<h2>Cadastro de Cursos</h2>
-				<h:form id="cursoForm" prependId="false">
-					<h:inputHidden value="#{cursoCadastroBean.curso.id}" />
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group has-warning">
-								<h:outputLabel value="Nome" style="font-weight:bold" />
-								<h:inputText pa:placeholder="Nome"
-									value="#{cursoCadastroBean.curso.nome}"
-									styleClass="form-control" required="true"
-									requiredMessage="Insira um nome" />
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<div style="margin-top: 20px">
+						<h:messages id="messages" showSummary="true" />
+					</div>
+					<h2>Cadastro de Cursos</h2>
+					<h:form id="cursoForm" prependId="false">
+						<h:inputHidden value="#{cursoCadastroBean.curso.id}" />
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group has-warning">
+									<h:outputLabel value="Nome" style="font-weight:bold" />
+									<h:inputText pa:placeholder="Nome"
+										value="#{cursoCadastroBean.curso.nome}"
+										styleClass="form-control" required="true"
+										requiredMessage="Insira um nome" />
+								</div>
 							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Duração" style="font-weight:bold" />
-								<div class="input-group">
-									<h:inputText required="true"
-										requiredMessage="Insira uma duração" pa:type="number"
-										pa:placeholder="Duração"
-										value="#{cursoCadastroBean.curso.duracao}"
-										styleClass="form-control" />
-									<span class="input-group-addon">HORAS-AULA (H/A)</span>
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Duração" style="font-weight:bold" />
+									<div class="input-group">
+										<h:inputText required="true"
+											requiredMessage="Insira uma duração" pa:type="number"
+											pa:placeholder="Duração"
+											value="#{cursoCadastroBean.curso.duracao}"
+											styleClass="form-control" />
+										<span class="input-group-addon">HORAS-AULA (H/A)</span>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Data de Início " style="font-weight:bold" />
-								<h:inputText required="true"
-									requiredMessage="Insira uma data de início" id="dataInicio"
-									pa:data-language='pt-br' styleClass="form-control date"
-									value="#{cursoCadastroBean.curso.dataInicio}">
-									<f:convertDateTime pattern="dd/mm/yyyy" />
-								</h:inputText>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Data de Início " style="font-weight:bold" />
+									<h:inputText required="true"
+										requiredMessage="Insira uma data de início" id="dataInicio"
+										pa:data-language='pt-br' styleClass="form-control date"
+										value="#{cursoCadastroBean.curso.dataInicio}">
+										<f:convertDateTime pattern="dd/mm/yyyy" />
+									</h:inputText>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Previsão de Término "
+										style="font-weight:bold" />
+									<h:inputText required="true"
+										requiredMessage="Insira uma data de término" id="dataTermino"
+										pa:data-language='pt-br' styleClass="form-control date"
+										value="#{cursoCadastroBean.curso.dataTermino}">
+										<f:convertDateTime pattern="dd/mm/yyyy" />
+									</h:inputText>
+								</div>
 							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Previsão de Término "
-									style="font-weight:bold" />
-								<h:inputText required="true"
-									requiredMessage="Insira uma data de término" id="dataTermino"
-									pa:data-language='pt-br' styleClass="form-control date"
-									value="#{cursoCadastroBean.curso.dataTermino}">
-									<f:convertDateTime pattern="dd/mm/yyyy" />
-								</h:inputText>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Vagas" style="font-weight:bold" />
+									<h:inputText required="true"
+										requiredMessage="Insira uma quantidade de vagas"
+										value="#{cursoCadastroBean.curso.vagas}" class="form-control"
+										pa:placeholder="Vagas" pa:type="number" />
+								</div>
 							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Vagas" style="font-weight:bold" />
-								<h:inputText required="true"
-									requiredMessage="Insira uma quantidade de vagas"
-									value="#{cursoCadastroBean.curso.vagas}" class="form-control"
-									pa:placeholder="Vagas" pa:type="number" />
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<h:outputLabel value="Escola" style="font-weight:bold" />
-								<h:selectOneMenu required="true"
-									requiredMessage="Insira uma escola"
-									converter="#{simpleEntityConverter}"
-									styleClass="form-control multiselect multiselect-info"
-									value="#{cursoCadastroBean.curso.escola}">
-									<f:selectItem itemValue="#{null}" itemLabel="Selecione" />
-									<f:selectItems value="#{cursoCadastroBean.listEscolaTotal}"
-										var="esc" itemValue="#{esc}" itemLabel="#{esc.nome}" />
-								</h:selectOneMenu>
-								<script type="text/javascript">
+							<div class="col-md-6">
+								<div class="form-group">
+									<h:outputLabel value="Escola" style="font-weight:bold" />
+									<h:selectOneMenu style="border: 2px solid #BDC3C7;padding-top: 0px; padding-bottom: 0px;" required="true"
+										requiredMessage="Insira uma escola"
+										converter="#{simpleEntityConverter}"
+										styleClass="form-control multiselect multiselect-info"
+										value="#{cursoCadastroBean.curso.escola}">
+										<f:selectItem itemValue="#{null}" itemLabel="Selecione" />
+										<f:selectItems value="#{cursoCadastroBean.listEscolaTotal}"
+											var="esc" itemValue="#{esc}" itemLabel="#{esc.nome}" />
+									</h:selectOneMenu>
+									<script type="text/javascript">
 								$(document).ready(function() {
 									$("select").select2();
 								    $(".date").inputmask( 'dd/mm/yyyy' );
@@ -116,44 +119,45 @@
 								    } );
 								});
 							</script>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<h:outputLabel value="Descrição Completa"
-									style="font-weight:bold" />
-								<h:inputTextarea
-									value="#{cursoCadastroBean.curso.descricaoCompleta}"
-									styleClass="form-control" rows="3" />
+						<div class="row">
+							<div class="col-sm-12">
+								<div class="form-group">
+									<h:outputLabel value="Descrição Completa"
+										style="font-weight:bold" />
+									<h:inputTextarea
+										value="#{cursoCadastroBean.curso.descricaoCompleta}"
+										styleClass="form-control" rows="3" />
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<c:if
-									test="${empty param.idCurso and empty cursoCadastroBean.curso.id}">
-									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{cursoCadastroBean.cadastrarCurso}" type="submit"
-										value="Cadastrar" />
-								</c:if>
-								<c:if test="${not empty param.idCurso}">
-									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{cursoCadastroBean.atualizarCurso}" type="submit"
-										value="Atualizar" />
-								</c:if>
-								<c:if
-									test="${empty param.idCurso and not empty cursoCadastroBean.curso.id}">
-									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{cursoCadastroBean.atualizarCurso}" type="submit"
-										value="Atualizar" />
-								</c:if>
+						<div class="row">
+							<div class="col-sm-12">
+								<div class="form-group">
+									<c:if
+										test="${empty param.idCurso and empty cursoCadastroBean.curso.id}">
+										<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+											action="#{cursoCadastroBean.cadastrarCurso}" type="submit"
+											value="Cadastrar" />
+									</c:if>
+									<c:if test="${not empty param.idCurso}">
+										<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+											action="#{cursoCadastroBean.atualizarCurso}" type="submit"
+											value="Atualizar" />
+									</c:if>
+									<c:if
+										test="${empty param.idCurso and not empty cursoCadastroBean.curso.id}">
+										<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+											action="#{cursoCadastroBean.atualizarCurso}" type="submit"
+											value="Atualizar" />
+									</c:if>
+								</div>
 							</div>
 						</div>
-					</div>
-				</h:form>
+					</h:form>
+				</div>
 			</div>
 		</ui:define>
 		<ui:define name="footer"></ui:define>
