--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-aluno.xhtml
@@ -15,85 +15,94 @@
 	</ui:define>
 
 		<ui:define name="content">
-			<div class="container top-landing">
-				<h:messages />
-				<h:form prependId="false">
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<h:messages />
+					<h:form prependId="false">
 
-					<h2>Lista de Alunos</h2>
-					<div class="row">
-						<div class="col-sm-12">
-							<p:dataTable emptyMessage="Nenhum resultado encontrado"
-								id="alunoTable" widgetVar="alunoTable" class="table" var="alu"
-								value="#{alunoListaBean.listAluno}">
-								<p:column headerText="Nome">
-									<h:outputText value="#{alu.nome}" />
-								</p:column>
-								<p:column headerText="Email">
-									<h:outputText value="#{alu.email}" />
-								</p:column>
-								<p:column headerText="Telefone">
-									<h:outputText value="#{alu.tel}" />
-								</p:column>
+						<h2>Lista de Alunos</h2>
+						<div class="row">
+							<div class="col-sm-12">
+								<p:dataTable emptyMessage="Nenhum resultado encontrado"
+									id="alunoTable" widgetVar="alunoTable" class="table" var="alu"
+									value="#{alunoListaBean.listAluno}">
+									<p:column headerText="Nome">
+										<h:outputText value="#{alu.nome}" />
+									</p:column>
+									<p:column headerText="Email">
+										<h:outputText value="#{alu.email}" />
+									</p:column>
+									<p:column headerText="Telefone">
+										<h:outputText value="#{alu.tel}" />
+									</p:column>
 
-								<p:column headerText="Endereco">
-									<h:outputText value="#{alu.endereco}" />
-								</p:column>
+									<p:column headerText="Endereco">
+										<h:outputText value="#{alu.endereco}" />
+									</p:column>
 
-								<p:column headerText="Curso">
+									<p:column headerText="Curso">
+										<div align="center">
 
+											<h:link style="margin-right: 3px;"
+												rendered="#{not empty alu.curso}"
+												outcome="/cadastro/cadastro-curso"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
+											#{alu.curso.nome}
+											<f:param name="idCurso" value="#{alu.curso.id}" />
+											</h:link>
 
-									<h:commandLink action="/cadastro/cadastro-curso"
-										styleClass="btn btn-info btn-xs">
-
-										<h:outputText value="#{alu.curso.nome}" />
-
-										<f:setPropertyActionListener
-											target="#{cursoCadastroBean.curso}" value="#{alu.curso}" />
-									</h:commandLink>
-
-
-
-								</p:column>
-								<p:column headerText="Opções">
-									<h:link id="btnsearch" outcome="/cadastro/cadastro-aluno"
-										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" />
+											<p:commandLink rendered="#{empty alu.curso}"
+												style="margin-right: 3px" class="btn btn-danger btn-xs"
+												type="button">
+												<i class="fa fa-exclamation-triangle"
+													style="margin-right: 3px" />  Sem Curso!
+									
+									</p:commandLink>
+										</div>
+									</p:column>
+									<p:column headerText="Opções">
+										<div align="center">
+											<h:link style="margin-right: 3px" id="btnsearch" outcome="/cadastro/cadastro-aluno"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
 										<f:param name="idAluno" value="#{alu.id}" />
-									</h:link>
-									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
-										style="margin-right: 3px" title="Deletar"
-										class="btn btn-danger btn-xs" type="button">
-										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
+											</h:link>
+											<p:commandLink pa:data-toggle="modal"
+												pa:data-target="#myModal" style="margin-right: 3px"
+												title="Deletar" class="btn btn-danger btn-xs" type="button">
+												<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{alunoListaBean.alunoRemover}" value="#{alu}" />
-									</p:commandLink>
-
-								</p:column>
-							</p:dataTable>
+													target="#{alunoListaBean.alunoRemover}" value="#{alu}" />
+											</p:commandLink>
+										</div>
+									</p:column>
+								</p:dataTable>
+							</div>
 						</div>
-					</div>
-				</h:form>
-			</div>
+					</h:form>
+				</div>
 
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"
-								aria-label="Close">
-								<span aria-hidden="true">&#215;</span>
-							</button>
-							<h4 class="modal-title" id="myModalLabel">Deseja deletar
-								este aluno?</h4>
-						</div>
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+					aria-labelledby="myModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&#215;</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel">Deseja deletar
+									este aluno?</h4>
+							</div>
 
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default"
-								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{alunoListaBean.remove()}" type="button"
-								class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Não</button>
+								<p:commandLink action="#{alunoListaBean.remove()}" type="button"
+									class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</div>
