--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
@@ -15,101 +15,93 @@
 	</ui:define>
 
 		<ui:define name="content">
-			<div class="container top-landing">
-				<h:messages />
-				<h:form prependId="false">
-					<h2>Lista de Cursos</h2>
-					<div class="row">
-						<div class="col-sm-12">
-							<p:dataTable emptyMessage="Nenhum resultado encontrado"
-								id="cursoTable" widgetVar="cursoTable" class="table" var="cur"
-								value="#{cursoListaBean.listCurso}">
-								<p:column headerText="Nome">
-									<h:outputText value="#{cur.nome}" />
-								</p:column>
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<h:messages />
+					<h:form prependId="false">
+						<h2>Lista de Cursos</h2>
+						<div class="row">
+							<div class="col-sm-12">
+								<p:dataTable emptyMessage="Nenhum resultado encontrado"
+									id="cursoTable" widgetVar="cursoTable" class="table" var="cur"
+									value="#{cursoListaBean.listCurso}">
+									<p:column headerText="Nome">
+										<h:outputText value="#{cur.nome}" />
+									</p:column>
 
-								<p:column headerText="Data de Início">
-									<h:outputText value="#{cur.dataInicio}"></h:outputText>
-								</p:column>
+									<p:column headerText="Data de Início">
+										<h:outputText value="#{cur.dataInicio}"></h:outputText>
+									</p:column>
 
-								<p:column headerText="Data de Término">
-									<h:outputText value="#{cur.dataTermino}"></h:outputText>
-								</p:column>
+									<p:column headerText="Data de Término">
+										<h:outputText value="#{cur.dataTermino}"></h:outputText>
+									</p:column>
 
-								<p:column headerText="Horas/Aula">
-									<h:outputText value="#{cur.duracao}" />
-								</p:column>
-								<p:column headerText="Vagas">
-									<h:outputText value="#{cur.vagas}" />
-								</p:column>
-								<p:column headerText="Escola">
-									<div align="center">
-										<h:commandLink rendered="#{not empty cur.escola}"
-											action="/cadastro/cadastro-escola"
-											styleClass="btn btn-info btn-xs">
-											<i class="fa fa-pencil" style="margin-right: 3px" />
-											<f:setPropertyActionListener
-												target="#{escolaCadastroBean.escola}" value="#{cur.escola}" />
-											<h:outputText value="#{cur.escola.nome}" />
-										</h:commandLink>
-
-
-
-										<p:commandLink rendered="#{empty cur.escola}"
-											style="margin-right: 3px" class="btn btn-danger btn-xs"
-											type="button">
-											<i class="fa fa-exclamation-triangle"
-												style="margin-right: 3px" />  Sem Escola!
-									
-									</p:commandLink>
-									</div>
-
-
-
-
-
-								</p:column>
-								<p:column headerText="Opções">
-									<div align="center">
-										<h:link id="btnsearch" outcome="/cadastro/cadastro-curso"
-											styleClass="btn btn-info btn-xs">
-											<i class="fa fa-pencil" style="margin-right: 3px" />
+									<p:column headerText="Horas/Aula">
+										<h:outputText value="#{cur.duracao}" />
+									</p:column>
+									<p:column headerText="Vagas">
+										<h:outputText value="#{cur.vagas}" />
+									</p:column>
+									<p:column headerText="Escola">
+										<div align="center">
+											<h:link style="margin-right: 3px" rendered="#{not empty cur.escola}"
+												outcome="/cadastro/cadastro-escola"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
+											#{cur.escola.nome}
+											<f:param name="idEscola" value="#{cur.escola.id}" />
+											</h:link>
+											<p:commandLink rendered="#{empty cur.escola}"
+												style="margin-right: 3px" class="btn btn-danger btn-xs"
+												type="button">
+												<i class="fa fa-exclamation-triangle"
+													style="margin-right: 3px" />  Sem Escola!
+											</p:commandLink>
+										</div>
+									</p:column>
+									<p:column headerText="Opções">
+										<div align="center">
+											<h:link style="margin-right: 3px" id="btnsearch" outcome="/cadastro/cadastro-curso"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
 										 <f:param name="idCurso" value="#{cur.id}" />
-										</h:link>
-										<p:commandLink pa:data-toggle="modal"
-											pa:data-target="#myModal" style="margin-right: 3px"
-											title="Deletar" class="btn btn-danger btn-xs" type="button">
-											<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
+											</h:link>
+											<p:commandLink pa:data-toggle="modal"
+												pa:data-target="#myModal" style="margin-right: 3px"
+												title="Deletar" class="btn btn-danger btn-xs" type="button">
+												<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-												target="#{cursoListaBean.cursoRemover}" value="#{cur}" />
-										</p:commandLink>
-									</div>
-								</p:column>
-							</p:dataTable>
+													target="#{cursoListaBean.cursoRemover}" value="#{cur}" />
+											</p:commandLink>
+										</div>
+									</p:column>
+								</p:dataTable>
+							</div>
 						</div>
-					</div>
-				</h:form>
-			</div>
+					</h:form>
+				</div>
 
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"
-								aria-label="Close">
-								<span aria-hidden="true">&#215;</span>
-							</button>
-							<h4 class="modal-title" id="myModalLabel">Deseja deletar
-								este curso?</h4>
-						</div>
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+					aria-labelledby="myModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&#215;</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel">Deseja deletar
+									este curso?</h4>
+							</div>
 
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default"
-								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{cursoListaBean.remove()}" type="button"
-								class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Não</button>
+								<p:commandLink action="#{cursoListaBean.remove()}" type="button"
+									class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</div>
