--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
@@ -15,103 +15,106 @@
 	</ui:define>
 
 		<ui:define name="content">
-			<div class="container top-landing">
-				<h:messages />
-				<h:form prependId="false">
-					<h2>Lista de Disciplinas</h2>
-					<div class="row">
-						<div class="col-sm-12">
-							<p:dataTable emptyMessage="Nenhum resultado encontrado"
-								id="disciplinaTable" widgetVar="disciplinaTable" class="table"
-								var="dis" value="#{disciplinaListaBean.listDisciplina}">
-								<p:column headerText="Nome">
-									<h:outputText value="#{dis.nome}" />
-								</p:column>
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<h:messages />
+					<h:form prependId="false">
+						<h2>Lista de Disciplinas</h2>
+						<div class="row">
+							<div class="col-sm-12">
+								<p:dataTable emptyMessage="Nenhum resultado encontrado"
+									id="disciplinaTable" widgetVar="disciplinaTable" class="table"
+									var="dis" value="#{disciplinaListaBean.listDisciplina}">
+									<p:column headerText="Nome">
+										<h:outputText value="#{dis.nome}" />
+									</p:column>
 
-								<p:column headerText="Descriçao">
-									<h:outputText value="#{dis.descricao}"></h:outputText>
-								</p:column>
+									<p:column headerText="Descriçao">
+										<h:outputText value="#{dis.descricao}"></h:outputText>
+									</p:column>
 
-								<p:column headerText="Professor">
-									<div align="center">
-										<h:link rendered="#{not empty dis.professor}"
-											outcome="/cadastro/cadastro-professor"
-											styleClass="btn btn-info btn-xs">
-											<i class="fa fa-pencil" style="margin-right: 3px" />
+									<p:column headerText="Professor">
+										<div align="center">
+											<h:link style="margin-right: 3px" rendered="#{not empty dis.professor}"
+												outcome="/cadastro/cadastro-professor"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 											#{dis.professor.nome}
-											<f:param name="idCurso" value="#{dis.professor.id}" />
-										</h:link>
-										<p:commandLink rendered="#{empty dis.professor}"
-											style="margin-right: 3px" class="btn btn-danger btn-xs"
-											type="button">
-											<i class="fa fa-exclamation-triangle"
-												style="margin-right: 3px" />  Sem Professor!
+											<f:param name="idProfessor" value="#{dis.professor.id}" />
+											</h:link>
+											<p:commandLink rendered="#{empty dis.professor}"
+												style="margin-right: 3px" class="btn btn-danger btn-xs"
+												type="button">
+												<i class="fa fa-exclamation-triangle"
+													style="margin-right: 3px" />  Sem Professor!
 									</p:commandLink>
-									</div>
-								</p:column>
-								<p:column headerText="Cursos Relacionados">
-									<div align="center">
-										<h:link rendered="#{not empty dis.curso}"
-											outcome="/cadastro/cadastro-curso"
-											styleClass="btn btn-info btn-xs">
-											<i class="fa fa-pencil" style="margin-right: 3px" />
+										</div>
+									</p:column>
+									<p:column headerText="Cursos Relacionados">
+										<div align="center">
+											<h:link style="margin-right: 3px" rendered="#{not empty dis.curso}"
+												outcome="/cadastro/cadastro-curso"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 											#{dis.curso.nome}
 											<f:param name="idCurso" value="#{dis.curso.id}" />
-										</h:link>
-										<p:commandLink rendered="#{empty dis.curso}"
-											style="margin-right: 3px" class="btn btn-danger btn-xs"
-											type="button">
-											<i class="fa fa-exclamation-triangle"
-												style="margin-right: 3px" />  Sem Curso!
+											</h:link>
+											<p:commandLink rendered="#{empty dis.curso}"
+												style="margin-right: 3px" class="btn btn-danger btn-xs"
+												type="button">
+												<i class="fa fa-exclamation-triangle"
+													style="margin-right: 3px" />  Sem Curso!
 									
 									</p:commandLink>
-									</div>
+										</div>
 
-								</p:column>
+									</p:column>
 
-								<p:column headerText="Opções">
-									<div align="center">
-										<h:link id="btnsearch" outcome="/cadastro/cadastro-disciplina"
-											styleClass="btn btn-info btn-xs">
-											<i class="fa fa-pencil" style="margin-right: 3px" />
+									<p:column headerText="Opções">
+										<div align="center">
+											<h:link style="margin-right: 3px" id="btnsearch"
+												outcome="/cadastro/cadastro-disciplina"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
 										<f:param name="idDisciplina" value="#{dis.id}" />
-										</h:link>
-										<p:commandLink pa:data-toggle="modal"
-											pa:data-target="#myModal" style="margin-right: 3px"
-											title="Deletar" class="btn btn-danger btn-xs" type="button">
-											<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
+											</h:link>
+											<p:commandLink pa:data-toggle="modal"
+												pa:data-target="#myModal" style="margin-right: 3px"
+												title="Deletar" class="btn btn-danger btn-xs" type="button">
+												<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-												target="#{disciplinaListaBean.disciplinaremover}"
-												value="#{dis}" />
-										</p:commandLink>
-									</div>
-								</p:column>
-							</p:dataTable>
+													target="#{disciplinaListaBean.disciplinaremover}"
+													value="#{dis}" />
+											</p:commandLink>
+										</div>
+									</p:column>
+								</p:dataTable>
+							</div>
 						</div>
-					</div>
-				</h:form>
-			</div>
+					</h:form>
+				</div>
 
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"
-								aria-label="Close">
-								<span aria-hidden="true">&#215;</span>
-							</button>
-							<h4 class="modal-title" id="myModalLabel">Deseja deletar
-								este disciplina?</h4>
-						</div>
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+					aria-labelledby="myModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&#215;</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel">Deseja deletar
+									este disciplina?</h4>
+							</div>
 
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default"
-								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{disciplinaListaBean.remove()}"
-								type="button" class="btn btn-primary btn-danger"
-								pa:data-dismiss="modal">Deletar</p:commandLink>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Não</button>
+								<p:commandLink action="#{disciplinaListaBean.remove()}"
+									type="button" class="btn btn-primary btn-danger"
+									pa:data-dismiss="modal">Deletar</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</div>
