--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
@@ -14,96 +14,110 @@
 	    Lista de Escolas
 	</ui:define>
 
+
 		<ui:define name="content">
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<h:messages />
+					<h:form prependId="false">
+						<h2>Lista de Escolas</h2>
+						<div class="row">
+							<div class="col-sm-12">
+								<p:dataTable emptyMessage="Nenhum resultado encontrado"
+									id="escolaTable" widgetVar="escolaTable" class="table"
+									var="esc" value="#{escolaListaBean.listEscola}">
+									<p:column headerText="Nome">
+										<h:outputText value="#{esc.nome}" />
+									</p:column>
 
-			<div class="container top-landing">
-				<h:messages />
-				<h:form prependId="false">
-					<h2>Lista de Escolas</h2>
-					<div class="row">
-						<div class="col-sm-12">
-							<p:dataTable emptyMessage="Nenhum resultado encontrado"
-								id="escolaTable" widgetVar="escolaTable" class="table" var="esc"
-								value="#{escolaListaBean.listEscola}">
-								<p:column headerText="Nome">
-									<h:outputText value="#{esc.nome}" />
-								</p:column>
+									<p:column headerText="Endereço">
+										<h:outputText value="#{esc.endereco}" />
+									</p:column>
 
-								<p:column headerText="Endereço">
-									<h:outputText value="#{esc.endereco}" />
-								</p:column>
+									<p:column headerText="Qtd. Salas">
+										<h:outputText value="#{esc.salas}" />
+									</p:column>
 
-								<p:column headerText="Qtd. Salas">
-									<h:outputText value="#{esc.salas}" />
-								</p:column>
+									<p:column headerText="Descrição">
+										<h:outputText value="#{esc.descricao}" />
+									</p:column>
 
-								<p:column headerText="Descrição">
-									<h:outputText value="#{esc.descricao}" />
-								</p:column>
+									<p:column headerText="Cursos Relacionados">
+										<div align="center">
+											<ui:repeat var="cur" value="#{esc.cursos}">
+												<h:link style="margin-right: 3px;" rendered="#{not empty cur}"
+													outcome="/cadastro/cadastro-curso"
+													styleClass="btn btn-info btn-xs">
+													<i class="fa fa-pencil" style="margin-right: 3px" />
+											#{cur.nome}
+											<f:param name="idCurso" value="#{cur.id}" />
+												</h:link>
+											</ui:repeat>
 
-								<p:column headerText="Cursos Relacionados">
-									<ui:repeat var="cur" value="#{esc.cursos}">
-										<h:commandLink action="/cadastro/cadastro-curso"
-											styleClass="btn btn-info btn-xs">
-											<f:setPropertyActionListener
-												target="#{cursoCadastroBean.curso}" value="#{cur}" />
-											<h:outputText value="#{cur.nome}  " />
-										</h:commandLink>
-									</ui:repeat>
-								</p:column>
+											<p:commandLink rendered="#{empty esc.cursos}"
+												style="margin-right: 3px" class="btn btn-danger btn-xs"
+												type="button">
+												<i class="fa fa-exclamation-triangle"
+													style="margin-right: 3px" />  Sem Cursos!
+											</p:commandLink>
+										</div>
+									</p:column>
 
-								<p:column headerText="Opções">
-									<h:link id="btnsearch"
-										outcome="/cadastro/cadastro-escola"
-										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" />
+									<p:column headerText="Opções">
+										<div align="center">
+											<h:link style="margin-right: 3px;" id="btnsearch" outcome="/cadastro/cadastro-escola"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 										  
 										  Editar
-										 <f:param name="idEscola" value="#{esc.id}"/>     
-									</h:link>
-									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
-										style="margin-right: 3px" title="Deletar"
-										class="btn btn-danger btn-xs" type="button">
-										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
+										 <f:param name="idEscola" value="#{esc.id}" />
+											</h:link>
+											<p:commandLink pa:data-toggle="modal"
+												pa:data-target="#myModal" style="margin-right: 3px"
+												title="Deletar" class="btn btn-danger btn-xs" type="button">
+												<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{escolaListaBean.escolaremover}" value="#{esc}" />
-									</p:commandLink>
-
-								</p:column>
-							</p:dataTable>
+													target="#{escolaListaBean.escolaremover}" value="#{esc}" />
+											</p:commandLink>
+										</div>
+									</p:column>
+								</p:dataTable>
+							</div>
 						</div>
-					</div>
-				</h:form>
-			</div>
+					</h:form>
+				</div>
 
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"
-								aria-label="Close">
-								<span aria-hidden="true">&#215;</span>
-							</button>
-							<h4 class="modal-title" id="myModalLabel">Deseja deletar
-								esta escola?</h4>
-						</div>
-						<div class="modal-body">
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+					aria-labelledby="myModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&#215;</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel">Deseja deletar
+									esta escola?</h4>
+							</div>
+							<div class="modal-body">
 
-							<h4 class="modal-title" id="myModalLabel">Atenção:</h4>
-							<p>Ao deletar esta escola você irá deletar todas as entides
-								relacionadas. Deseja continuar?</p>
-						</div>
+								<h4 class="modal-title" id="myModalLabel">Atenção:</h4>
+								<p>Ao deletar esta escola você irá deletar todas as entides
+									relacionadas. Deseja continuar?</p>
+							</div>
 
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default"
-								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{escolaListaBean.remove()}" type="button"
-								class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Não</button>
+								<p:commandLink action="#{escolaListaBean.remove()}"
+									type="button" class="btn btn-primary btn-danger"
+									pa:data-dismiss="modal">Deletar</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 		</ui:define>
 		<ui:define name="footer"></ui:define>
 	</ui:composition>
