--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
@@ -15,91 +15,98 @@
 	</ui:define>
 
 		<ui:define name="content">
-			<div class="container top-landing">
-				<h:messages />
-				<h:form prependId="false">
-					<h2>Lista de Professores</h2>
-					<div class="row">
-						<div class="col-sm-12">
-							<p:dataTable emptyMessage="Nenhum resultado encontrado"
-								id="professorTable" widgetVar="professorTable" class="table"
-								var="prof" value="#{professorListaBean.listProfessor}">
-								<p:column headerText="Nome">
-									<h:outputText value="#{prof.nome}" />
-								</p:column>
-								<p:column headerText="Email">
-									<h:outputText value="#{prof.email}" />
-								</p:column>
-								<p:column headerText="Telefone">
-									<h:outputText value="#{prof.telefone}" />
-								</p:column>
+			<div style="margin-top: 53px" class="canvas">
+				<div class="container">
+					<h:messages />
+					<h:form prependId="false">
+						<h2>Lista de Professores</h2>
+						<div class="row">
+							<div class="col-sm-12">
+								<p:dataTable emptyMessage="Nenhum resultado encontrado"
+									id="professorTable" widgetVar="professorTable" class="table"
+									var="prof" value="#{professorListaBean.listProfessor}">
+									<p:column headerText="Nome">
+										<h:outputText value="#{prof.nome}" />
+									</p:column>
+									<p:column headerText="Email">
+										<h:outputText value="#{prof.email}" />
+									</p:column>
+									<p:column headerText="Telefone">
+										<h:outputText value="#{prof.telefone}" />
+									</p:column>
 
-								<p:column headerText="Endereco">
-									<h:outputText value="#{prof.endereco}" />
-								</p:column>
+									<p:column headerText="Endereco">
+										<h:outputText value="#{prof.endereco}" />
+									</p:column>
 
-								<p:column headerText="Disciplinas">
+									<p:column headerText="Disciplinas">
 
-									<div align="center">
+										<div align="center">
 
-										<ui:repeat var="dis" value="#{prof.disciplinas}">
+											<ui:repeat var="dis" value="#{prof.disciplinas}">
 
-											<h:link action="/cadastro/cadastro-disciplina"
-												styleClass="btn btn-info btn-xs">
-												<f:param name="idDisciplina" value="#{dis.id}" />
-												#{dis.nome}
-											</h:link>
-										</ui:repeat>
-										<p:commandLink  rendered="#{empty prof.disciplinas}"
-												style="margin-right: 3px" class="btn btn-danger btn-xs"
-												type="button">
+												<h:link style="margin-right: 3px"
+													outcome="/cadastro/cadastro-disciplina"
+													styleClass="btn btn-info btn-xs">
+													<i class="fa fa-pencil" style="margin-right: 3px" />
+														#{dis.nome}
+													<f:param name="idDisciplina" value="#{dis.id}" />
+
+												</h:link>
+											</ui:repeat>
+											<p:commandLink style="margin-right: 3px"
+												rendered="#{empty prof.disciplinas}"
+												class="btn btn-danger btn-xs" type="button">
 												<i class="fa fa-exclamation-triangle"
 													style="margin-right: 3px" />  Sem Disciplinas!
 											</p:commandLink>
-									</div>
-								</p:column>
-								<p:column headerText="Opções">
-									<h:link id="btnsearch" outcome="/cadastro/cadastro-professor"
-										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" />
+										</div>
+									</p:column>
+									<p:column headerText="Opções">
+										<div align="center">
+
+											<h:link style="margin-right: 3px" id="btnsearch" outcome="/cadastro/cadastro-professor"
+												styleClass="btn btn-info btn-xs">
+												<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
 									<f:param name="idProfessor" value="#{prof.id}" />
-									</h:link>
-									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
-										style="margin-right: 3px" title="Deletar"
-										class="btn btn-danger btn-xs" type="button">
-										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
+											</h:link>
+											<p:commandLink pa:data-toggle="modal"
+												pa:data-target="#myModal" style="margin-right: 3px"
+												title="Deletar" class="btn btn-danger btn-xs" type="button">
+												<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{professorListaBean.professorRemover}"
-											value="#{prof}" />
-									</p:commandLink>
-
-								</p:column>
-							</p:dataTable>
+													target="#{professorListaBean.professorRemover}"
+													value="#{prof}" />
+											</p:commandLink>
+										</div>
+									</p:column>
+								</p:dataTable>
+							</div>
 						</div>
-					</div>
-				</h:form>
-			</div>
+					</h:form>
+				</div>
 
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"
-								aria-label="Close">
-								<span aria-hidden="true">&#215;</span>
-							</button>
-							<h4 class="modal-title" id="myModalLabel">Deseja deletar
-								este professor?</h4>
-						</div>
+				<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+					aria-labelledby="myModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&#215;</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel">Deseja deletar
+									este professor?</h4>
+							</div>
 
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default"
-								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{professorListaBean.remove()}"
-								type="button" class="btn btn-primary btn-danger"
-								pa:data-dismiss="modal">Deletar</p:commandLink>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Não</button>
+								<p:commandLink action="#{professorListaBean.remove()}"
+									type="button" class="btn btn-primary btn-danger"
+									pa:data-dismiss="modal">Deletar</p:commandLink>
+							</div>
 						</div>
 					</div>
 				</div>
