--- a/JavaWeb-exAvaliacao/WebContent/userInvalido.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/userInvalido.xhtml
@@ -12,10 +12,11 @@
 		<ui:define name="content">
 			<div style="margin-top: 53px" class="canvas">
 				<div class="container">
-					<h1 style="margin-top: 300px">
-						<i class="fa fa-exclamation-triangle" />Você não pode acessar esta
-						página<i class="fa fa-exclamation-triangle" />
-					</h1>
+					<h4 class="text-center" style="margin-top: 300px">
+						<i class="fa fa-exclamation-triangle" />#{msg}<i class="fa fa-exclamation-triangle" />
+					</h4>
+					
+					
 				</div>
 			</div>
 		</ui:define>
